# ncurses-terminal-games

./: .git_manager_key  .gitignore  AGENTS.md  DREAMS.md  Makefile  README.md  Round5-测试报告-2026-03-31.md  SOUL.md  USER.md  lc_2026-04-16_evening.md  lc_2026-04-19_ng.md  lc_ac_automaton  lc_ac_automaton.cpp  lc_ac_debug  lc_ac_debug.cpp  lc_segment_tree  lc_segment_tree.cpp  lc_sliding_window  lc_sliding_window.cpp  minesweeper_raylib  tmp_patch_launch.py  video-production-solution-20260330.md  zcloud-bot
exercises/: causal_convolution.py
games/: lc_2026-04-16_evening.md  lc_2026-04-16_night.md  lc_2026-04-17.md  lc_2026-04-17_backtrack_dfs.md  (+8 more)
projects/javis-claude-core/: .coverage  .gitignore  coverage.json  pyproject.toml  test_core.py
projects/javis-claude-core/src/: __init__.py  __init__.py,cover  agent_protocol.py  agent_quota.py  bash_executor.py  bash_executor.py,cover  compact.py  compact.py,cover  cron_alert.py  exceptions.py  file_ops.py  file_ops.py,cover  mcp_server.py  resource_guard.py  resource_guard.py,cover  retry_executor.py  retry_executor.py,cover  runtime.py  runtime.py,cover  session.py  session.py,cover  shared_context.py  task_dispatcher.py
projects/javis-claude-core/tests/: __init__.py  conftest.py  test_agent_protocol.py  test_agent_quota.py  test_bash_executor.py  test_compact.py  test_cron_alert.py  test_destructive.py  test_file_ops.py  test_mcp_openclaw_tools.py  test_mcp_server.py  test_resource_guard.py  test_runtime.py  test_session.py  test_shared_context.py  test_task_dispatcher.py  test_v33_p0.py  test_v34_runtime_integration.py
(+939 files in other folders)
